# llm-from-scratch

./: ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05.ipynb  ch07.ipynb  generate_text.py  gpt_download.py  prepare_gutenberg_dataset.py  pyproject.toml  train.py  train_model_optimized.py
models/: from_scratch.py
models/gpt/: model.py
scripts/: clean_gutenberg_dataset.py  download_dataset.py  download_gutenberg_dataset.py  evaluate_model.py  monitor_gpu.sh  prepare_gutenberg_dataset.py
