[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.1.7",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
